SERVER-11226 fix --keyFile to work with relative path when --fork'd